@@ -16,6 +16,7 @@ OpenLDAP 2.2.15 Engineering
 	Fixed slapd abandon/cancel pending bug
 	Fixed slapd attribute description syntax bug
 	Fixed slapd ACI caching bug (caching disabled, ITS#3215)
+	Fixed slapd uniqueMemberMatch empty DN portion bug (ITS#3247)
 	Fixed slapadd dryrun mode (ITS#3244)
 	Fixed libldap SASL re-encode bug
 	Fixed libldap sasl_encode 64-bit bug (ITS#3054,3212)
